--- a/_view/controls/header.ejs
+++ b/_view/controls/header.ejs
@@ -1,16 +1,21 @@
 <ul class="menu">
-<li>
 	<% for(var name in Nav){ %>
-		<a <%= RuleName.toLowerCase().indexOf(name.toLowerCase()) !== -1 ? 'class=current' :'' %> href='<%= Nav[name].Url %>' ><%= name %></a>
-		<% if(Nav[name].SubNav){ %>
-		<ul class="subMenu">
-			<% for (var subName in Nav[name].SubNav){ %>
-				<li>
-					<a href='<%= Nav[name].SubNav[subName].Url %>' ><%= subName %></a>
-				</li>
+		<li>
+			<a <%= RuleName.toLowerCase().indexOf(name.toLowerCase()) !== -1 ? 'class=current' :'' %> href='<%= Source_nav %><%= Nav[name].Url %>' ><%= name %>
+				<% if(Nav[name].SubNav){ %>
+					<input type="checkbox" id="subP-acc" name="acc-1">
+       				<label for="subP-acc">&dtrif;</label>
+				<% } %>
+			</a>
+			<% if(Nav[name].SubNav){ %>
+				<ul class="subMenu">
+					<% for (var subName in Nav[name].SubNav){ %>
+						<li>
+							<a href='<%= Source_nav %><%= Nav[name].SubNav[subName].Url %>' ><%= subName %></a>
+						</li>
+					<% } %>
+				</ul>
 			<% } %>
-		</ul>
-		<% } %>
+		</li>
 	<% } %>
-</li>
 </ul>
