--- a/_view/index.ejs
+++ b/_view/index.ejs
@@ -7,7 +7,7 @@
 <body>
   <!-- nav -->
   <header class="header">
-    <a href="/" class="logo"><img src="<%= Source_img %>logo.png"></a>
+    <a href="<%= Source_nav %>index.html" class="logo"><img src="<%= Source_img %>logo.png"></a>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <%- include('controls/header') %>
@@ -20,11 +20,14 @@
       <div class="banner"> <span>Banner here</span>
       </div>
       <!-- intro text -->
-      <div class="intro"><span>Find the latest prototypes and test resultes here. Get to know the team and the limitless future of Cisco Spark.</span></div>
+      <div class="intro"><span>Welcome to the Spark prototyping site! You can find the latest prototypes and test resultes here. Get to know the team and the limitless future of Spark.</span></div>
       <!--content blocks -->
       <div class="block-wrapper">
-        <div class="block-l"> <a href="#"><span>Protorypes</span></a></div>
-        <div class="block-r"> <a href="#"><span>Research</span></a></div>
+        <div class="block-l"> <a href="./prototypes/index.html"><span>Protorypes</span></a></div>
+        <div class="block-r"> <a href="./research/360°-camera-and-vr.html"><span>Research</span></a></div>
+      </div>
+      <div class="block-wrapper">
+        <div class="block-a"><a href="./team/index.html"><span>Team</span></a></div>
       </div>
     </dir>
   </div>
