--- a/_view/prototypes.ejs
+++ b/_view/prototypes.ejs
@@ -23,10 +23,10 @@
       <div class="intro"><span>Find the latest prototypes and test resultes here. Get to know the team and the limitless future of Cisco Spark.</span></div>-->
       <!--content blocks -->
       <div class="block-wrapper">
-        <div class="block-l"> <a href="#"><span>Current Projects</span></a></div>
+        <div class="block-l"> <a href="./current/spark-pairing.html"><span>Current Projects</span></a></div>
         <div class="block-r"> <a href="#"><span>Experimental</span></a></div>
         <div class="block-l"> <a href="#"><span>Archived</span></a></div>
-        <div class="block-r"> <a href="#"><span>FAQ & Troubleshoot</span></a></div>
+        <div class="block-r"> <a href="./guide/clear-cashe.html"><span>FAQ & Troubleshoot</span></a></div>
       </div>
     </dir>
   </div>
