--- a/_view/team.ejs
+++ b/_view/team.ejs
@@ -7,29 +7,21 @@
 <body>
   <!-- nav -->
   <header class="header">
-    <a href="/" class="logo"><img src="<%= Source_img %>logo.png"></a>
+    <a href="<%= Source_nav %>index.html" class="logo"><img src="<%= Source_img %>logo.png"></a>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <%- include('controls/header') %>
   </header>
   <div class='container'>
-  <!-- breadcrumb-->
+    <!-- breadcrumb-->
     <!--main content -->
     <div class="main">
-<!-- or breadcrumb-->
-
-
-     <%- include('controls/aside') %>
-
      
-     <!-- article -->
-     <dir class="content">     
-       <div class="section">
-        <%- include('controls/article') %>       	
-      </div>
+      <!-- intro text -->
+      <div class="intro"><span>Meet the team members behind the Spark portotypes.</span></div>
+      <!--content blocks -->
+     <!-- how to add the members.ejs here??? -->
     </dir>
-
-
   </div>
   <!-- footer -->
   <div style="clear:both;"></div>
