--- a/_view/controls/head.ejs
+++ b/_view/controls/head.ejs
@@ -10,8 +10,5 @@
 <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 <script type="text/javascript" src="<%= Source_js %>jquery-2.0.0.min.js"></script>
 <script type="text/javascript" src="<%= Source_js %>highlight.pack.js"></script>
-<script type="text/javascript">
-	
-</script>
+<script type="text/javascript" src="<%= Source_js %>breadcrumb.js"></script>
 <%- DemoCss %>
-<%- DemoJs %>
