--- a/_view/index.ejs
+++ b/_view/index.ejs
@@ -15,6 +15,7 @@
   <div class='container'>  
     <!--main content -->
     <div class="main">    
+   <%- include('controls/breadcrumbs') %>
       <!-- banner -->
       <div class="banner"> <span>Banner here</span>
       </div>
