--- a/_view/index.ejs
+++ b/_view/index.ejs
@@ -14,7 +14,8 @@
   </header>
   <div class='container'>  
     <!--main content -->
-    <div class="main">    
+    <div class="main"> 
+    <%- include('controls/breadcrumbs') %>
          <!-- banner -->
       <div class="banner"> <span>Banner here</span>
       </div>
