--- a/_view/prototypes.ejs
+++ b/_view/prototypes.ejs
@@ -15,6 +15,7 @@
   <div class='container'>
     <!--main content -->
     <div class="main">
+    <%- include('controls/breadcrumbs') %>
       <!-- intro text 
       <div class="intro"><span>Find the latest prototypes and test resultes here. Get to know the team and the limitless future of Cisco Spark.</span></div>-->
       <!--content blocks -->
