--- a/_view/team.ejs
+++ b/_view/team.ejs
@@ -16,7 +16,7 @@
     <!-- breadcrumb-->
     <!--main content -->
     <div class="main">
-     
+     <%- include('controls/breadcrumbs') %>   
       <!-- intro text -->
       <div class="intro"><span>Meet the team members behind the Spark portotypes.</span></div>
       <!--content blocks -->
