--- a/_view/controls/breadcrumbs.ejs
+++ b/_view/controls/breadcrumbs.ejs
@@ -1,7 +1,9 @@
 <ul class="breadcrumbs">
-		<% for(var name in BreadCrumbs){ %>
+	<li><a href="<%= Source_nav %>index.html">Home</a></li> 
+	</li>
+	<% for(var name in BreadCrumbs){ %>
 		<li>
-			<a href='<%= BreadCrumbs[name] %>' ><%= name %></a>
-			</li>
-		<% } %>
+				<a href='<%= BreadCrumbs[name] %>' ><%= name %></a>
+		</li>
+	<% } %>
 </ul>
