--- a/_view/list.ejs
+++ b/_view/list.ejs
@@ -7,6 +7,7 @@
       <%- include('controls/header') %>
         <div class='container'>
             <div class='main'>
+            <%- include('controls/breadcrumbs') %>   
               <% for(var i in List){ %>
                 <a class='list_item' target='_blank' href='<%= List[i].RenderData.NameHTML %>'>
                   <h1><%= List[i].RenderData.Title %></h1>
