--- a/_view/index.ejs
+++ b/_view/index.ejs
@@ -20,7 +20,8 @@
       <div class="banner"> <span>Banner here</span>
       </div>
       <!-- intro text -->
-      <div class="intro"><span>Welcome to the Spark prototyping site! You can find the latest prototypes and test resultes here. Get to know the team and the limitless future of Spark.</span></div>
+      <div class="intro"><span>Welcome to the Spark prototyping site! You can find the latest prototypes and test resultes here. Get to know the team and the limitless future of Spark.</span>
+      </div>
       <!--content blocks -->
       <div class="block-wrapper">
         <div class="block-l"> <a href="./prototypes/index.html"><span>Protorypes</span></a></div>
