--- a/_view/prototypes.ejs
+++ b/_view/prototypes.ejs
@@ -23,7 +23,7 @@
         <div class="block-l"> <a href="./current/spark-pairing.html"><span>Current Projects</span></a></div>
         <div class="block-r"> <a href="#"><span>Experimental</span></a></div>
         <div class="block-l"> <a href="#"><span>Archived</span></a></div>
-        <div class="block-r"> <a href="./guide/clear-cashe.html"><span>FAQ & Troubleshoot</span></a></div>
+        <div class="block-r"> <a href="./guide/clear-cache.html"><span>FAQ & Troubleshoot</span></a></div>
       </div>
     </dir>
   </div>
