--- a/css/public.css
+++ b/css/public.css
@@ -417,3 +417,8 @@ p img {
   border:1px solid #ccc;
 }
 }
+@media only screen and (max-width: 480px) {
+  .intro {
+    margin-bottom: 90px;
+  }
+}
