--- a/css/public.css
+++ b/css/public.css
@@ -13,7 +13,7 @@ a {
 a:hover {
   color:#666;
 }
-h1{
+h1, h2, h3, h4, h5,h6{
   margin-top: 0;
 }
 p img {
@@ -313,6 +313,7 @@ p img {
 .articleBlock{
   display: block;
   border: 1px solid #ccc;
+  border-radius: 5px;
   width: 25%;
   height: 160px;
   padding: 20px;
@@ -354,13 +355,13 @@ p img {
   border-top: 0;
   display: none;
 }
+
+/* ---- media query below ---*/
 /* 48em = 768px */
 
 @media (min-width: 48em) {
-  .header li {    
-  }
   .header li a {
-    padding: 20px 30px;
+    padding:20px 30px;
     float: left;
   }
   .header .menu {
@@ -441,7 +442,7 @@ p img {
   width: 100%;
   height: 100px;
   border-bottom: 1px dotted #ccc;
-  float: none;
+
 }
   .list_item{
     color: #F13712;
