--- a/_view/prototypes.ejs
+++ b/_view/prototypes.ejs
@@ -14,6 +14,7 @@
   </header>
   <div class='container'>
     <!--main content -->
+    <div class="container_left"></div>
     <div class="main">
     <%- include('controls/breadcrumbs') %>
       <!-- intro text 
@@ -25,11 +26,11 @@
         <div class="block-l"> <a href="#"><span>Archived</span></a></div>
         <div class="block-r"> <a href="./guide/index.html"><span>FAQ & Troubleshoot</span></a></div>
       </div>
-    </dir>
+    </div>
+    <div class="container_left"></div>
   </div>
   <!-- footer -->
-  <div style="clear:both;"></div>
-  <%- include('controls/footer') %>
 </div>
+<%- include('controls/footer') %>
 </body>
 </html>
