--- a/_view/controls/head.ejs
+++ b/_view/controls/head.ejs
@@ -1,7 +1,7 @@
 <title><%= Title %></title>
 <meta charset='utf-8'>
 <link rel="icon" type="image/x-icon" href="<%= Source_img %>fav.ico">
-<meta name="viewport" content="width=device-width,minimal-ui"  >
+<meta name="viewport" content="width=device-width,minimal-ui,initial-scale=1.0" />
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link rel="stylesheet" type="text/css" href="<%= Source_css %>public.css" media="screen">
