--- a/_view/index.ejs
+++ b/_view/index.ejs
@@ -14,27 +14,27 @@
   </header>
   <div class='container'>  
     <!--main content -->
+    <div class="container_left"></div>
     <div class="main"> 
     <%- include('controls/breadcrumbs') %>
          <!-- banner -->
-      <div class="banner"> <span>Banner here</span>
-      </div>
+      <div class="banner"> <span>Banner here</span></div>
       <!-- intro text -->
       <div class="intro"><span>Welcome to the Spark prototyping site! You can find the latest prototypes and test resultes here. Get to know the team and the limitless future of Spark.</span>
       </div>
       <!--content blocks -->
       <div class="block-wrapper">
-        <div class="block-l"> <a href="./prototypes/index.html"><span>Protorypes</span></a></div>
+        <div class="block-l"> <a href="./prototypes/index.html"><span>Prototypes</span></a></div>
         <div class="block-r"> <a href="./research/360°-camera-and-vr.html"><span>Research</span></a></div>
       </div>
       <div class="block-wrapper">
         <div class="block-a"><a href="./team/index.html"><span>Team</span></a></div>
       </div>
-    </dir>
+    </div>
+    <div class="container_left"></div>
   </div>
   <!-- footer -->
-  <div style="clear:both;"></div>
-  <%- include('controls/footer') %>
-</div>
+  </div>
+<%- include('controls/footer') %>
 </body>
 </html>
