css and some minor updates

--- a/_view/controls/article.ejs
+++ b/_view/controls/article.ejs
@@ -5,10 +5,12 @@
 	<div class='article_body'>
 		<%- Content %>		
 	</div>
+	<!-- hiding pagination per Damon's feedback 
 	<footer class='article_footer'>
+
 		<div class="pagination">
 			<%- List_Prev %>
 			<%- List_Next %> 	 	
 		</div>		
-	</footer>
+	</footer>-->
 </article>
