--- a/_view/docs.ejs
+++ b/_view/docs.ejs
@@ -7,15 +7,17 @@
 <body>
   <!-- nav -->
   <header class="header">
+  <div class="NavContent">
     <a href="/" class="logo"><img src="<%= Source_img %>logo.png"></a>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <%- include('controls/header') %>
+    </div>
   </header>
   <div class='container'>
+  <div class="wrapper">
     <!--main content -->
-    <div class="container_left"></div>
-    <div class="main">
+   <div class="main">
       <%- include('controls/breadcrumbs') %>
       <!-- article -->
       <div class="content">     
@@ -25,8 +27,9 @@
       </div>
     </div>
     <%- include('controls/aside') %>
-    <!-- footer -->
+ </div>   
   </div>
-  <%- include('controls/footer') %>
+ <!-- footer --> 
+ <%- include('controls/footer') %>
 </body>
 </html>
