--- a/_view/list.ejs
+++ b/_view/list.ejs
@@ -6,13 +6,15 @@
   </head>
   <body>
   <header class="header">
+  <div class="NavContent">
     <a href="<%= Source_nav %>index.html" class="logo"><img src="<%= Source_img %>logo.png"></a>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
       <%- include('controls/header') %>
+      </div>
   </header>
         <div class='container'>
-            <div class="container_left"></div>
+            <div class="wrapper">
             <div class='main'>
              <%- include('controls/breadcrumbs') %>
              <!-- article list below -->
@@ -33,7 +35,7 @@
                Page <%- PageFirst %><%- PagePre %><%- PageGroup %><%- PageNext %><%- PageLast %>
               </div>    
             </div>
-            <div class="container_left"></div>
+            </div>
         </div>
       <%- include('controls/footer') %>
   </body>
