--- a/_view/prototypes.ejs
+++ b/_view/prototypes.ejs
@@ -7,12 +7,15 @@
 <body>
   <!-- nav -->
   <header class="header">
+  <div class="NavContent">
     <a href="/" class="logo"><img src="<%= Source_img %>logo.png"></a>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <%- include('controls/header') %>
+    </div>
   </header>
   <div class='container'>
+  <div class="wrapper">
     <!--main content -->
     <div class="container_left"></div>
     <div class="main">
@@ -29,8 +32,9 @@
     </div>
     <div class="container_left"></div>
   </div>
-  <!-- footer -->
+ </div>
 </div>
-<%- include('controls/footer') %>
+ <!-- footer -->
+ <%- include('controls/footer') %>
 </body>
 </html>
