--- a/_view/team.ejs
+++ b/_view/team.ejs
@@ -7,12 +7,15 @@
 <body>
   <!-- nav -->
   <header class="header">
+  <div class="NavContent">
     <a href="<%= Source_nav %>index.html" class="logo"><img src="<%= Source_img %>logo.png"></a>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <%- include('controls/header') %>
+    </div>
   </header>
   <div class='container'>
+  <div class="wrapper">
     <!-- breadcrumb-->
     <!--main content -->
     <div class="main">
@@ -23,8 +26,9 @@
      <!-- how to add the members.ejs here??? -->
     </dir>
   </div>
-  <!-- footer -->
 </div>
- <%- include('controls/footer') %>
+</div>
+   <!-- footer -->
+   <%- include('controls/footer') %>
 </body>
 </html>
