--- a/css/list.css
+++ b/css/list.css
@@ -20,23 +20,25 @@
     position: absolute; 
     left: 0px; 
     top: 120px;
-    color: white;
-    background-color: rgba(241,55,18,0.8);
+    color: #444;
+    background-color: rgba(209,211,211,0.8);
   }
 
   .articleBlock_cover .list_space{display: block;width: 100%; height: 10px; margin: 0px;}
-  .articleBlock_cover .list_title{font-size:16px; margin:0px 20px 0 20px; line-height: 20px;}
+  .articleBlock_cover .list_title{font-size:16px; margin:0px 20px 0 20px; line-height: 20px; font-weight: bold;}
   .articleBlock_cover .list_item_date{font-size:12px; margin: 3px 20px 0 20px;line-height: 18px;}
   .articleBlock_cover .list_item_desc{font-size:12px; margin:30px 20px 0 20px; line-height: 18px;  height: 54px; overflow: hidden;}
 
   .articleBlock:hover .articleBlock_cover{
       transition: top 0.2s;
       top:0px;
+      background-color: rgba(209,211,211,1);
+      transition: background-color 200ms linear;
   }
 
   .articleBlock:hover .articleBlock_cover .list_space{
       transition: height 0.2s;
-      height: 20px; 
+      height: 20px;    
   }
 
 }
@@ -60,7 +62,7 @@
 
 
   .articleBlock_cover .list_space{display: block;width: 100%; height: 15px; margin: 0px;}
-  .articleBlock_cover .list_title{font-size:16px; margin:0px 10px 0 10px; line-height: 20px; text-decoration: underline;}
+  .articleBlock_cover .list_title{font-size:16px; margin:0px 10px 0 10px; line-height: 20px; text-decoration: underline; font-weight: bold;}
   .articleBlock_cover .list_item_date{font-size:12px; margin: 3px 10px 0 10px;line-height: 15px; position: absolute; top: 12px; right: 10px;}
   .articleBlock_cover .list_item_desc{font-size:14px; margin:15px 10px 0 10px; line-height: 18px;  height: 36px; overflow: hidden; }
 
