--- a/_view/docs.ejs
+++ b/_view/docs.ejs
@@ -16,9 +16,10 @@
   </header>
   <div class='container'>
   <div class="wrapper">
+  <%- include('controls/breadcrumbs') %>
     <!--main content -->
    <div class="main">
-      <%- include('controls/breadcrumbs') %>
+      
       <!-- article -->
       <div class="content">     
         <div class="section">
@@ -26,7 +27,8 @@
         </div>
       </div>
     </div>
-    <%- include('controls/aside') %>
+    <!--
+    <%- include('controls/aside') %>-->
  </div>   
   </div>
  <!-- footer --> 
