--- a/css/public.css
+++ b/css/public.css
@@ -74,7 +74,7 @@ p img {
 }
 .content{
   width: 100%; 
-  border-right: 1px solid #ccc; 
+ /* border-right: 1px solid #ccc; */
 }
 .copyright {
   width: 100%;
