--- a/_view/controls/header.ejs
+++ b/_view/controls/header.ejs
@@ -1,21 +1,31 @@
-<ul class="menu">
-	<% for(var name in Nav){ %>
-		<li>
-			<a <%= RuleName.toLowerCase().indexOf(name.toLowerCase()) !== -1 ? 'class=current' :'' %> href='<%= Source_nav %><%= Nav[name].Url %>' ><%= name %>
-				<% if(Nav[name].SubNav){ %>
-					<input type="checkbox" id="subP-acc" name="acc-1">
-       				<label for="subP-acc">&dtrif;</label>
-				<% } %>
-			</a>
-			<% if(Nav[name].SubNav){ %>
-				<ul class="subMenu">
-					<% for (var subName in Nav[name].SubNav){ %>
-						<li>
-							<a href='<%= Source_nav %><%= Nav[name].SubNav[subName].Url %>' ><%= subName %></a>
-						</li>
-					<% } %>
-				</ul>
+<header class="header">
+  	<div class="NavContent">
+	    <a href="/" class="logo"><img src="<%= Source_img %>logo.png"></a>
+	    <input class="menu-btn" type="checkbox" id="menu-btn" />
+	    <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+		<ul class="Nav">
+			<% for(var name in Nav){ %>
+				<li>
+					<a <%= RuleName.toLowerCase().indexOf(name.toLowerCase()) !== -1 ? 'class=current' :'' %> href='<%= Source_nav %><%= Nav[name].Url %>' ><%= name %></a>
+					<% if(Nav[name].SubNav){ %>
+						<ul class="subMenu">
+							<% for (var subName in Nav[name].SubNav){ %>
+								<% var ifCurrent = false; %>
+								<% for(var bname in BreadCrumbs){ %>
+									<% if(bname.toLowerCase() === subName.toLowerCase()) {ifCurrent = true; break; }%>
+								<% } %>
+								<li>
+									<a <%= ifCurrent ? 'class=current' :'' %>  href='<%= Source_nav %><%= Nav[name].SubNav[subName].Url %>' ><%= subName %></a>
+								</li>
+							<% } %>
+						</ul>
+					<% } %>	
+				</li>
 			<% } %>
-		</li>
-	<% } %>
-</ul>
+		</ul>    
+    </div>
+</header>
+
+
+
+
