--- a/css/public.css
+++ b/css/public.css
@@ -1,384 +1,72 @@
+*{padding: 0px; margin: 0px;}
 
-body {
-  margin: 0;
-  font-family: 'Quicksand', sans-serif;
-  background-color: #fefefe;
-  overflow: auto;
-}
 
-a {
-  color: #000;
-  word-wrap:break-word;
-}
-a:hover {
-  color:#666;
-}
-h1, h2, h3, h4, h5,h6{
-  margin-top: 0;
-}
-p img {
-  max-width: 30%; 
-  margin-right: 20px;
-}
-.container {
-  width: 100%;
-  display:flex; 
-  flex-flow: row;
-  display: -webkit-flex; -webkit-flex-flow: row;
-  margin:0 auto; 
-  position: relative;
-}
-.wrapper{
-  width: 1024px;
-  margin:20px auto;
-}
-.container_left{
-  width: 40px;
-  -webkit-flex:none;
-  flex:none;
-}
-.main{ 
-  -webkit-flex:1;
-  flex:1;
-  margin-top: 0px; 
-}
-.sideMenu{
-  width: 220px;
-  -webkit-flex:none;
-  flex:none;
-  padding: 20px 0px 20px 0px; 
-}
-.sideMenu li {
-  list-style: none;
-}
-.sideMenu a {
-  display: block;
-  padding: 10px 15px;
-  text-align: left;
-}
-.breadcrumbs{
-  padding: 0;
-}
-.breadcrumbs li{
-  display: inline;
-  font-size: 14px;
-}
-.breadcrumb li a{
-  color: #333;
-}
-.breadcrumbs li+li::before{
-  content: ' › ';
-}
-.breadcrumbs li:last-child a{
-  text-decoration: none;
-}
-.content{
-  width: 100%; 
- /* border-right: 1px solid #ccc; */
-}
-.copyright {
-  width: 100%;
-  margin: 40px auto;
-  text-align: center;
-  border-top:1px solid #666;
-}
+body { margin: 0; font-family: 'Quicksand', sans-serif;  background-color: #fefefe;  overflow: auto; }
+
+a{color: #000;  word-wrap:break-word;}
+a:hover {color:#666;}
+h1, h2, h3, h4, h5,h6{ margin-top: 0;}
+ul,li{list-style: none; margin: 0px;}
+
+.container { width: 100%;  display:flex;  flex-flow: row;  display: -webkit-flex; -webkit-flex-flow: row;margin:0 auto;  position: relative;}
+.wrapper{ width: 1024px; margin:20px auto;}
+.container_left{ width: 40px; -webkit-flex:none; flex:none;}
+.main{  -webkit-flex:1; flex:1; margin-top: 0px; }
+
+.sideMenu{ width: 220px; -webkit-flex:none; flex:none; padding: 20px 0px 20px 0px; }
+.sideMenu li { list-style: none;}
+.sideMenu a { display: block; padding: 10px 15px; text-align: left; }
+
+.breadcrumbs{ padding: 0; margin: 7px 0;}
+.breadcrumbs li{ display: inline; font-size: 16px; margin-right: 10px; }
+.breadcrumbs li a{ color: #43a942;font-size: 16px; }
+.breadcrumbs li+li::before{ content: ' › '; color: #8BCA8A; }
+.breadcrumbs li:last-child a{ text-decoration: none;}
+.content{ width: 100%; /* border-right: 1px solid #ccc; */ }
+.copyright {   width: 100%; margin: 80px auto; text-align: center;  color: #4F5051;}
 
 /* header */
-
-.header {
-  background-color: #fff;
-  border-bottom: 1px solid #F13712;
-  position: relative;
-  width: 100%;
-  margin: 0 auto;
-  z-index: 3;  
-}
+.header { background-color: #fff; position: relative; width: 100%; margin: 0 auto; z-index: 3; }
 
 /* center nav items */
-.NavContent{
-  width: 1024px;
-  margin: 0 auto;
-  margin-top: 20px;
-}
+.NavContent{ width: 1024px; margin: 0 auto; position: relative; height: 80px;}
+.NavContent .logo{display: block; position: absolute; top: 0px;left: 10px; height: 80px; }
+.NavContent .logo img{height: 70%; position: absolute; top: 10px; left: 0px;}
+.NavContent input,.NavContent menu-icon{display: none;}
 
-.header ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  overflow: hidden;
-  background-color: #fff;
-}
+.NavContent .Nav{ margin-left: 124px; width:900px; height: 80px;}
+.NavContent .Nav>li{display: inline-block; position: relative;  margin-right: 10px;height: 80px; line-height: 80px; }
+.NavContent .Nav>li>a{display: inline-block; text-align:center; height: 80px; line-height: 80px; padding: 0 20px; text-decoration: none; font-size: 18px; color: #AEAEAF;}
+.NavContent .Nav>li:hover>a,.NavContent .Nav>li .current{color: #049fd9;border-bottom: 2px solid #049fd9; height: 78px;}
 
-.header li a {
-  display: block;
-  /*padding: 20px 20px;
-  border-right: 1px solid #f4f4f4;*/
-  border: 1px solid #fff;
-  border-radius: 5px;
-  text-decoration: none;
-  text-align: center;
-  color: #F13712;
-}
+.NavContent .Nav>li .subMenu{position: absolute; top: 100%; left: 0px;  display: none; margin: 0px;}
+.NavContent .Nav>li:hover .subMenu{display: block; width: 100%; text-align: center;}
+.subMenu li {width: 100%; height: 40px; }
+.subMenu li a{ display: block; width: 100%; height: 40px; line-height: 40px; text-decoration: none; background:rgba(255,255,255,0.9); color: #AEAEAF; text-align: center; font-size: 14px;}
+.subMenu li a:hover,.subMenu li .current{color: #049fd9;}
 
-.header li a:hover,
-.header .menu-btn:hover {
-  background-color: #f6f6f6;
-  /*
-  border-top: 3px solid #666666;
-  border-bottom: 3px solid #666666;*/
-  border: 1px solid #fff;
-  border-radius: 5px;
-}
-.header li ul li a{
-  border: none;
-}
-.header li ul li a:hover{
- /* border-top:3px solid #F13712;
-  border-bottom:3px solid #F13712;*/
-  border: none;
-  background: #F13712;
-}
-.header .logo img {
-  display: block;
-  float: left;/*
-  font-size: 2em;
-  padding: 10px 20px;
-  text-decoration: none;*/
-  max-width: 50px;
-  padding-top:13px;
-  padding-left: 20px;
-}
-.header li a.current {
-  /*
-  border-top:3px solid #F13712;
-  border-bottom:3px solid #F13712;
-  */
-  background: #F13712;
-  border: 1px solid #fff;
-  border-radius: 5px;
-  color: #fff;
-}
 /* menu */
 
-.header .menu {
-  clear: both;
-  max-height: 0;
-  transition: max-height .2s ease-out;
-}
-.header .menu input {
-  display: none;
-}
-.header .menu li ul.subMenu {
-  display: none;
-  width: 100%;
-  box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
-  background-color: #F13712;
-
-}
-/* trying accordion from here */
-.header .menu li:hover>ul, .menu li:focus ul{
-  display: inline-block;
-  position: absolute;
-  left: 0;
-  top: 60px;
-}
-.header .menu li input {
-  display: none;
-}
-.header .menu li ul li a {
-  border-right: none;
-  padding: 10px 20px;
-}
-/*
-.header ul.menu li ul li{
-  float: none;
-}
-.header .menu>li:hover ul, .menu li:focus ul {
-  position: absolute;
-  display: block;
-}
-/* submenu styling*/
-.subMenu li a{
-  font-size: 14px;
-  color: #fff;  
-}
-.subMenu li:hover a{
-  color: #666666;
-}
-
-/* menu icon */
-
-.header .menu-icon {
-  cursor: pointer;
-  display: inline-block;
-  float: right;
-  padding: 28px 20px;
-  position: relative;
-  user-select: none;
-}
-.header .menu-icon .navicon {
-  background: #333;
-  display: block;
-  height: 2px;
-  position: relative;
-  transition: background .2s ease-out;
-  width: 18px;
-}
-.header .menu-icon .navicon:before,
-.header .menu-icon .navicon:after {
-  background: #333;
-  content: " ";
-  display: block;
-  height: 100%;
-  position: absolute;
-  transition: all .2s ease-out;
-  width: 100%;
-}
-
-.header .menu-icon .navicon:before {
-  top: 5px;
-}
-
-.header .menu-icon .navicon:after {
-  top: -5px;
-}
-
-/* menu btn */
-
-.header .menu-btn {
-  display: none;
-}
-
-.header .menu-btn:checked ~ .menu {
-  max-height: 100%; /* was 240px */
-}
-
-.header .menu-btn:checked ~ .menu-icon .navicon {
-  background: transparent;
-}
-
-.header .menu-btn:checked ~ .menu-icon .navicon:before {
-  transform: rotate(-45deg);
-}
-
-.header .menu-btn:checked ~ .menu-icon .navicon:after {
-  transform: rotate(45deg);
-}
-
-.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
-.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
-  top: 0;
-}
-
 /* Banner */
-
-.banner{
-  width: 100%;
-  margin: 0 auto;
-  border: 1px solid #ccc;
-  height: 240px;
-  background-color: #999;
-  color: #fff;
-  position: relative;
-  margin-bottom: 20px;
-}
-.banner span {
-  display: block;
-  height: 20px;
-  text-align: center;
-  width: 100%;
-  margin: 110px 0;
-}
-.intro{
-  width: 100%;
-  min-height: 60px;
-  margin-bottom: 20px;
-  clear: both;
-}
-.intro span {
-  display: block;
-  height: 30px;
-  width: 100%;
-  color: #666;
-  text-align: center;
-  font-size: 20px;
-  margin: 15px 0;
-}
-.block-wrapper{
-  width: 100%;
-  margin-bottom: 20px;
-  clear: both;
-}
+.banner{  width: 100%;  margin: 0 auto 20px auto;  border: 1px solid #ccc;  height: 240px;  background-color: #999;  color: #fff;  position: relative;}
+.banner span {  display: block;  height: 20px;  text-align: center;  width: 100%;  margin: 110px 0;}
+.intro{  width: 100%; min-height: 60px; margin-bottom: 20px; clear: both;}
+.intro span { display: block; height: 30px; width: 100%; color: #666; text-align: center; font-size: 20px; margin: 15px 0;}
+.block-wrapper{ width: 100%; margin-bottom: 20px; clear: both;}
 /* blocks for right, left, top and bottom right, top and bottom left, and all */
-.block-l, .block-r, .block-a, .block-tr, .block-tl, .block-br, .block-bl{
-  width: 48%;
-  height: 150px;
-  border: 1px solid #ccc;
-  position: relative;
-  margin-bottom: 20px;
-}
-.block-l{
-  float: left;
-}
-.block-r{  
-  float: right;  
-}
-.block-l a, .block-r a, .block-a a{
-  display: block;
-  width: 100%;
-  background-color: #666;
-  opacity: 0.5;
-  position: absolute;
-  bottom: 20px;
-  text-align: center;
-  color: #fff;
-  padding: 10px 0;
-  text-decoration:none;
-}
-.block-l a:hover, .block-r a:hover{
-  opacity: 1;
-}
-.block-a {
-  width: 100%;
-
-}
+.block-l, .block-r, .block-a, .block-tr, .block-tl, .block-br, .block-bl{ width: 48%; height: 150px; border: 1px solid #ccc; position: relative;  margin-bottom: 20px;}
+.block-l{ float: left;}
+.block-r{ float: right;}
+.block-l a, .block-r a, .block-a a{ display: block; width: 100%; background-color: #666; opacity: 0.5; position: absolute; bottom: 20px; text-align: center; color: #fff; padding: 10px 0; text-decoration:none;}
+.block-l a:hover, .block-r a:hover{ opacity: 1;}
+.block-a { width: 100%;}
 
 
-/*
-.list_item{
-    color: #F13712;
-}
-.list_item span:hover{
-  color:#666;
-}
-.list_item p{
-  text-decoration: none;
-  font-size: 16px;
-  padding: 0;
-  margin: ;
-}
-.list_title{
-  font-size: 20px;
-  font-weight: bold;
-  color: #F13712;
-  padding: 0;
-}
-.list_item_date{
-  font-size: 14px;
-  color: #777;
-}
-*/
 
-.pagination{
-  margin-top: 40px;
-  text-align: center;
-}
+
+.pagination{ margin-top: 40px; text-align: center;}
 /* divider not used */
-.divider{
-  border-bottom: 1px dotted #ccc;
-  border-top: 0;
-  display: none;
-}
+.divider{ border-bottom: 1px dotted #ccc; border-top: 0; display: none;}
 
 
 .article a{white-space: nowrap; word-break: break-all; display: inline-block; max-width: 100%;}
@@ -391,39 +79,18 @@ p img {
 
 
 @media (min-width: 48em) {
-  .header li a {
-    padding:20px 30px;
-    float: left;
-  }
-  .header .menu {
-    clear: none;
-    /*float: right;*/
-    max-height: none;
-  }
-  .header .menu-icon {
-    display: none;
-  }
+
 }
 /* change side menu and content to 100% screen width when screen size is smaller than 768px*/
 @media only screen and (max-width: 768px) {
   body{
     overflow-x: hidden;
   }
-  .header{
-    width: 100%;
-    position: fixed;
-  }
+
   /*.header .menu li {
     position: relative;
   }*/
-  .sideMenu{
-    border-bottom: 1px solid #ccc;    
-    display: none;
-  }
-  .sideMenu a{
-    padding: 5px 0px;
-    text-align: left;
-  }
+
   .content{
     border: none;
     padding: 10px 0px;
@@ -442,22 +109,7 @@ p img {
     width: 100%;
     margin-top: 20px;
   }
-  .header li a.current {
-    border-top:none;
-    border-bottom:none; 
-  }
-  .header li a:hover{
-    border-top: none;
-    border-bottom: none;
-  }
-  .header .menu li:hover>ul, .menu li:focus ul, 
-  .header .menu li:hover>a label,
-  .header .menu li>a label{
-    display: none;
-  }
-  .breadcrumbs{
-    padding-top: 40px;
-  }
+
   p img {
   max-width: 80%; 
   margin-right: 20px;
@@ -470,30 +122,6 @@ p img {
     flex:none;
   }
 
-/*
-  .list_item{
-    color: #F13712;
-  }
-  .list_item span:hover{
-    color:#666;
-  }
-  .list_item p{
-    text-decoration: none;
-    font-size: 16px;
-    padding: 0;
-    margin: ;
-  }
-  .list_title{
-    font-size: 20px;
-    font-weight: bold;
-    color: #F13712;
-    padding: 0;
-  }
-  .list_item_date{
-    font-size: 14px;
-    color: #777;
-  }
-*/
 
   .pagination{
     margin-top: 40px;
@@ -505,6 +133,16 @@ p img {
     border-bottom: 1px dotted #ccc;
     border-top: 0;
   }
+
+  .NavContent{ width: 100%; height: 60px;}
+  .NavContent .logo{left: 5px; height: 60px; }
+  .NavContent .logo img{display: none;}
+
+  .NavContent .Nav{ margin-left: 10%; width:90%; height: 60px;}
+  .NavContent .Nav>li{ margin-right: 7px;height: 60px; line-height: 60px; }
+  .NavContent .Nav>li>a{height: 60px; line-height: 60px; padding: 0 10px;  font-size: 16px;}
+  .NavContent .Nav>li:hover>a,.NavContent .Nav>li .current{color: #049fd9;border-bottom: 1px solid #049fd9; height: 59px;}
+
 }
 @media only screen and (max-width: 480px) {
   .intro {
