--- a/_view/controls/head.ejs
+++ b/_view/controls/head.ejs
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="<%= Source_css %>public.css" media="screen">
 <!--
 <link rel="stylesheet" type="text/css" href="<%= Source_css %>github_gist.css" media="screen"> -->
-<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
 <script type="text/javascript" src="<%= Source_js %>jquery-2.0.0.min.js"></script>
 <script type="text/javascript" src="<%= Source_js %>highlight.pack.js"></script>
 <%- DemoCss %>
