--- a/_view/index.ejs
+++ b/_view/index.ejs
@@ -13,14 +13,14 @@
     <div class="main"> 
     <%- include('controls/breadcrumbs') %>
          <!-- banner -->
-      <div class="banner"> <span>Banner here</span></div>
-      <!-- intro text -->
+      <!-- <div class="banner"> <span>Banner here</span></div>
+      intro text 
       <div class="intro"><span>Welcome to the Spark prototyping site! You can find the latest prototypes and test resultes here. Get to know the team and the limitless future of Spark.</span>
-      </div>
+      </div>-->
       <!--content blocks -->
       <div class="block-wrapper">
         <div class="block-l"> <a href="./prototypes/index.html"><span>Prototypes</span></a></div>
-        <div class="block-r"> <a href="./research/360°-camera-and-vr.html"><span>Research</span></a></div>
+        <div class="block-r"> <a href="./research/index.html"><span>Research</span></a></div>
       </div>
       <div class="block-wrapper">
         <div class="block-a"><a href="./team/index.html"><span>Team</span></a></div>
