--- a/_view/prototypes.ejs
+++ b/_view/prototypes.ejs
@@ -18,8 +18,8 @@
       <!--content blocks -->
       <div class="block-wrapper">
         <div class="block-l"> <a href="./current/index.html"><span>Current Projects</span></a></div>
-        <div class="block-r"> <a href="#"><span>Experimental</span></a></div>
-        <div class="block-l"> <a href="#"><span>Archived</span></a></div>
+        <div class="block-r"> <a href="./experimental/index.html"><span>Experimental</span></a></div>
+        <div class="block-l"> <a href="./archived/index.html"><span>Archived</span></a></div>
         <div class="block-r"> <a href="./guide/index.html"><span>FAQ & Troubleshoot</span></a></div>
       </div>
     </div>
