--- a/css/public.css
+++ b/css/public.css
@@ -18,8 +18,8 @@ ul,li{list-style: none; margin: 0px;}
 .sideMenu a { display: block; padding: 10px 15px; text-align: left; }
 
 .breadcrumbs{ padding: 0; margin: 7px 0;}
-.breadcrumbs li{ display: inline; font-size: 16px; margin-right: 10px; }
-.breadcrumbs li a{ color: #43a942;font-size: 16px; }
+.breadcrumbs li{ display: inline; font-size: 12px; margin-right: 10px; }
+.breadcrumbs li a{ color: #43a942;font-size: 12px; }
 .breadcrumbs li+li::before{ content: ' › '; color: #8BCA8A; }
 .breadcrumbs li:last-child a{ text-decoration: none;}
 .content{ width: 100%; /* border-right: 1px solid #ccc; */ }
@@ -53,15 +53,13 @@ ul,li{list-style: none; margin: 0px;}
 .intro{  width: 100%; min-height: 60px; margin-bottom: 20px; clear: both;}
 .intro span { display: block; height: 30px; width: 100%; color: #666; text-align: center; font-size: 20px; margin: 15px 0;}
 .block-wrapper{ width: 100%; margin-bottom: 20px; clear: both;}
-/* blocks for right, left, top and bottom right, top and bottom left, and all */
-.block-l, .block-r, .block-a, .block-tr, .block-tl, .block-br, .block-bl{ width: 48%; height: 150px; border: 1px solid #ccc; position: relative;  margin-bottom: 20px;}
+/* blocks for right, left, top and bottom right, top and bottom left, and all, ll-large left*/
+.block-l, .block-r, .block-a, .block-tr, .block-tl, .block-br, .block-bl, .block-ll{ width: 48%; height: 150px; border: 1px solid #ccc; position: relative;  margin-bottom: 20px;}
 .block-l{ float: left;}
 .block-r{ float: right;}
 .block-l a, .block-r a, .block-a a{ display: block; width: 100%; background-color: #666; opacity: 0.5; position: absolute; bottom: 20px; text-align: center; color: #fff; padding: 10px 0; text-decoration:none;}
 .block-l a:hover, .block-r a:hover{ opacity: 1;}
 .block-a { width: 100%;}
-
-
 
 
 .pagination{ margin-top: 40px; text-align: center;}
@@ -76,63 +74,22 @@ ul,li{list-style: none; margin: 0px;}
 /* ---- media query below ---*/
 /* 48em = 768px */
 
-
-
 @media (min-width: 48em) {
 
 }
 /* change side menu and content to 100% screen width when screen size is smaller than 768px*/
 @media only screen and (max-width: 768px) {
-  body{
-    overflow-x: hidden;
-  }
-
-  /*.header .menu li {
-    position: relative;
-  }*/
-
-  .content{
-    border: none;
-    padding: 10px 0px;
-    margin-left: 0;
-  }
-  .main {
-    margin-top:40px;
-  }
-  .intro {
-    margin-bottom: 40px;
-  }
-  .block-wrapper{
-    margin-top: 20px;
-  }
-  .block-l, .block-r{
-    width: 100%;
-    margin-top: 20px;
-  }
-
-  p img {
-  max-width: 80%; 
-  margin-right: 20px;
-  border:1px solid #ccc;
-  }
-
-  .container_left{
-    width: 20px;
-    -webkit-flex:none;
-    flex:none;
-  }
-
-
-  .pagination{
-    margin-top: 40px;
-    text-align: center;
-  }
+  body{overflow-x: hidden;}
+  p img {max-width: 80%; margin-right: 20px; border:1px solid #ccc;}
+  .content{border: none; padding: 10px 0px; margin-left: 0;}
+  .main {margin-top:40px;}
+  .intro {margin-bottom: 40px;}
+  .block-wrapper{margin-top: 20px;}
+  .block-l, .block-r{width: 100%; margin-top: 20px;}
+  .container_left{width: 20px; -webkit-flex:none; flex:none;}
+  .pagination{margin-top: 40px; text-align: center;}
   /* divider not used */
-  .divider{
-    display: block;
-    border-bottom: 1px dotted #ccc;
-    border-top: 0;
-  }
+  .divider{display: block; border-bottom: 1px dotted #ccc; border-top: 0;}
 
   .NavContent{ width: 100%; height: 60px;}
   .NavContent .logo{left: 5px; height: 60px; }
@@ -145,12 +102,6 @@ ul,li{list-style: none; margin: 0px;}
 
 }
 @media only screen and (max-width: 480px) {
-  .intro {
-    margin-bottom: 90px;
-  }
-  .container_left{
-    width: 10px;
-    -webkit-flex:none;
-    flex:none;
-  }
+  .intro {margin-bottom: 90px;}
+  .container_left{width: 10px; -webkit-flex:none; flex:none;}
 }
