--- a/_view/index.ejs
+++ b/_view/index.ejs
@@ -14,7 +14,7 @@
     <%- include('controls/breadcrumbs') %>
          <!-- banner -->
       <!-- <div class="banner"> <span>Banner here</span></div>
-      intro text 
+      <!intro text 
       <div class="intro"><span>Welcome to the Spark prototyping site! You can find the latest prototypes and test resultes here. Get to know the team and the limitless future of Spark.</span>
       </div>-->
       <!--content blocks -->
