--- a/css/public.css
+++ b/css/public.css
@@ -9,7 +9,7 @@ h1, h2, h3, h4, h5,h6{ margin-top: 0;}
 ul,li{list-style: none; margin: 0px;}
 
 .container { width: 100%;  display:flex;  flex-flow: row;  display: -webkit-flex; -webkit-flex-flow: row;margin:0 auto;  position: relative;}
-.wrapper{ width: 1024px; margin:20px auto;}
+.wrapper{ width: 1044px; margin:10px auto; padding:0 20px;}
 .container_left{ width: 40px; -webkit-flex:none; flex:none;}
 .main{  -webkit-flex:1; flex:1; margin-top: 0px; }
 
@@ -19,8 +19,8 @@ ul,li{list-style: none; margin: 0px;}
 
 .breadcrumbs{ padding: 0; margin: 7px 0;}
 .breadcrumbs li{ display: inline; font-size: 12px; margin-right: 10px; }
-.breadcrumbs li a{ color: #43a942;font-size: 12px; }
-.breadcrumbs li+li::before{ content: ' › '; color: #8BCA8A; }
+.breadcrumbs li a{ color: #14A792;font-size: 12px; }
+.breadcrumbs li+li::before{ content: ' › '; color: #14A792; }
 .breadcrumbs li:last-child a{ text-decoration: none;}
 .content{ width: 100%; /* border-right: 1px solid #ccc; */ }
 .copyright {   width: 100%; margin: 80px auto; text-align: center;  color: #4F5051;}
@@ -36,13 +36,13 @@ ul,li{list-style: none; margin: 0px;}
 
 .NavContent .Nav{ margin-left: 124px; width:900px; height: 80px;}
 .NavContent .Nav>li{display: inline-block; position: relative;  margin-right: 10px;height: 80px; line-height: 80px; }
-.NavContent .Nav>li>a{display: inline-block; text-align:center; height: 80px; line-height: 80px; padding: 0 20px; text-decoration: none; font-size: 18px; color: #AEAEAF;}
+.NavContent .Nav>li>a{display: inline-block; text-align:center; height: 80px; line-height: 80px; padding: 0 20px; text-decoration: none; font-size: 18px; color: #4f5051;}
 .NavContent .Nav>li:hover>a,.NavContent .Nav>li .current{color: #049fd9;border-bottom: 2px solid #049fd9; height: 78px;}
 
 .NavContent .Nav>li .subMenu{position: absolute; top: 100%; left: 0px;  display: none; margin: 0px;}
 .NavContent .Nav>li:hover .subMenu{display: block; width: 100%; text-align: center;}
 .subMenu li {width: 100%; height: 40px; }
-.subMenu li a{ display: block; width: 100%; height: 40px; line-height: 40px; text-decoration: none; background:rgba(255,255,255,0.9); color: #AEAEAF; text-align: center; font-size: 14px;}
+.subMenu li a{ display: block; width: 100%; height: 40px; line-height: 40px; text-decoration: none; background:rgba(255,255,255,0.9); color: #4f5051; text-align: center; font-size: 14px;}
 .subMenu li a:hover,.subMenu li .current{color: #049fd9;}
 
 /* menu */
@@ -53,8 +53,8 @@ ul,li{list-style: none; margin: 0px;}
 .intro{  width: 100%; min-height: 60px; margin-bottom: 20px; clear: both;}
 .intro span { display: block; height: 30px; width: 100%; color: #666; text-align: center; font-size: 20px; margin: 15px 0;}
 .block-wrapper{ width: 100%; margin-bottom: 20px; clear: both;}
-/* blocks for right, left, top and bottom right, top and bottom left, and all, ll-large left*/
-.block-l, .block-r, .block-a, .block-tr, .block-tl, .block-br, .block-bl, .block-ll{ width: 48%; height: 150px; border: 1px solid #ccc; position: relative;  margin-bottom: 20px;}
+/* blocks for right, left, top and bottom right, top and bottom left, and all, ll=large left, lr = large*/
+.block-l, .block-r, .block-a, .block-tr, .block-tl, .block-br, .block-bl, .block-ll, .block-lr{ width: 48%; height: 150px; border: 1px solid #ccc; position: relative;  margin-bottom: 20px;}
 .block-l{ float: left;}
 .block-r{ float: right;}
 .block-l a, .block-r a, .block-a a{ display: block; width: 100%; background-color: #666; opacity: 0.5; position: absolute; bottom: 20px; text-align: center; color: #fff; padding: 10px 0; text-decoration:none;}
@@ -67,41 +67,40 @@ ul,li{list-style: none; margin: 0px;}
 .divider{ border-bottom: 1px dotted #ccc; border-top: 0; display: none;}
 
 
-.article a{white-space: nowrap; word-break: break-all; display: inline-block; max-width: 100%;}
-.article p{word-wrap: break-word;}
+.article a{ white-space: nowrap; word-break: break-all; display: inline-block; max-width: 100%;}
+.article p{ word-wrap: break-word;}
 
 
 /* ---- media query below ---*/
-/* 48em = 768px */
 
-@media (min-width: 48em) {
-
-}
 /* change side menu and content to 100% screen width when screen size is smaller than 768px*/
-@media only screen and (max-width: 768px) {
-  body{overflow-x: hidden;}
-  p img {max-width: 80%; margin-right: 20px; border:1px solid #ccc;}
-  .content{border: none; padding: 10px 0px; margin-left: 0;}
-  .main {margin-top:40px;}
-  .intro {margin-bottom: 40px;}
-  .block-wrapper{margin-top: 20px;}
-  .block-l, .block-r{width: 100%; margin-top: 20px;}
-  .container_left{width: 20px; -webkit-flex:none; flex:none;}
-  .pagination{margin-top: 40px; text-align: center;}
+@media only screen and ( max-width: 768px) {
+  body{ overflow-x: hidden;}
+  p{overflow-wrap: break-word; word-wrap: break-word;}
+  a {word-break: break-all;}
+  p img { max-width: 80%; margin-right: 20px; border:1px solid #ccc;}
+  .wrapper{ margin-top: 0;}
+  .content{ border: none; padding: 10px 0px; margin-left: 0;}
+  .main { margin-top:40px;}
+  .intro { margin-bottom: 40px;}
+  .block-wrapper{ margin-top: 20px;}
+  .block-l, .block-r{ width: 100%; margin-top: 20px;}
+  .container_left{ width: 20px; -webkit-flex:none; flex:none;}
+  .pagination{ margin-top: 40px; text-align: center;}
   /* divider not used */
-  .divider{display: block; border-bottom: 1px dotted #ccc; border-top: 0;}
+  .divider{ display: block; border-bottom: 1px dotted #ccc; border-top: 0;}
 
   .NavContent{ width: 100%; height: 60px;}
-  .NavContent .logo{left: 5px; height: 60px; }
-  .NavContent .logo img{display: none;}
+  .NavContent .logo{ left: 5px; height: 60px; }
+  .NavContent .logo img{ display: none;}
 
   .NavContent .Nav{ margin-left: 10%; width:90%; height: 60px;}
   .NavContent .Nav>li{ margin-right: 7px;height: 60px; line-height: 60px; }
-  .NavContent .Nav>li>a{height: 60px; line-height: 60px; padding: 0 10px;  font-size: 16px;}
-  .NavContent .Nav>li:hover>a,.NavContent .Nav>li .current{color: #049fd9;border-bottom: 1px solid #049fd9; height: 59px;}
+  .NavContent .Nav>li>a{ height: 60px; line-height: 60px; padding: 0 10px;  font-size: 16px;}
+  .NavContent .Nav>li:hover>a,.NavContent .Nav>li .current{ color: #049fd9;border-bottom: 1px solid #049fd9; height: 59px;}
 
 }
-@media only screen and (max-width: 480px) {
-  .intro {margin-bottom: 90px;}
-  .container_left{width: 10px; -webkit-flex:none; flex:none;}
+@media only screen and ( max-width: 480px) {
+  .intro { margin-bottom: 90px;}
+  .container_left{ width: 10px; -webkit-flex:none; flex:none;}
 }
