--- a/_view/index.ejs
+++ b/_view/index.ejs
@@ -19,11 +19,11 @@
       </div>-->
       <!--content blocks -->
       <div class="block-wrapper">
-        <div class="block-l"> <a href="./prototypes/index.html"><span>Prototypes</span></a></div>
-        <div class="block-r"> <a href="./research/index.html"><span>Research</span></a></div>
+        <div class="block-l" style="background-image:url('<%= Source_img %>prototype.jpeg')"> <a href="./prototypes/index.html"><span>Prototypes</span></a></div>
+        <div class="block-r" style="background-image:url('<%= Source_img %>research.jpg')"> <a href="./research/index.html"><span>Research</span></a></div>
       </div>
       <div class="block-wrapper">
-        <div class="block-a"><a href="./team/index.html"><span>Team</span></a></div>
+        <div class="block-a" style="background-image:url('<%= Source_img %>team.jpg')"><a href="./team/index.html"><span>Team</span></a></div>
       </div>
     </div>
     
