--- a/_view/team.ejs
+++ b/_view/team.ejs
@@ -17,6 +17,9 @@
       <div class="intro"><span>Meet the team members behind the Spark portotypes.</span></div>
       <!--content blocks -->
      <!-- how to add the members.ejs here??? -->
+      <div class="block-wrapper">
+        <div class="block-a" style="background-image:url('<%= Source_img %>team.jpg')"><a href="./team/index.html"><span>Team</span></a></div>
+      </div>
     </dir>
   </div>
 </div>
