--- a/_view/prototypes.ejs
+++ b/_view/prototypes.ejs
@@ -17,10 +17,10 @@
       <div class="intro"><span>Find the latest prototypes and test resultes here. Get to know the team and the limitless future of Cisco Spark.</span></div>-->
       <!--content blocks -->
       <div class="block-wrapper">
-        <div class="block-l"> <a href="./current/index.html"><span>Current Projects</span></a></div>
-        <div class="block-r"> <a href="./experimental/index.html"><span>Experimental</span></a></div>
-        <div class="block-l"> <a href="./archived/index.html"><span>Archived</span></a></div>
-        <div class="block-r"> <a href="./guide/index.html"><span>FAQ & Troubleshoot</span></a></div>
+        <div class="block-l" style="background-image:url('<%= Source_img %>project.jpg')"> <a href="./current/index.html"><span>Current Projects</span></a></div>
+        <div class="block-r" style="background-image:url('<%= Source_img %>experimental.jpg')"> <a href="./experimental/index.html"><span>Experimental</span></a></div>
+        <div class="block-l" style="background-image:url('<%= Source_img %>archiving.jpeg')"> <a href="./archived/index.html"><span>Archived</span></a></div>
+        <div class="block-r" style="background-image:url('<%= Source_img %>faq.jpg')"> <a href="./guide/index.html"><span>FAQ & Troubleshoot</span></a></div>
       </div>
     </div>
     <div class="container_left"></div>
