--- a/css/public.css
+++ b/css/public.css
@@ -1,7 +1,7 @@
 *{padding: 0px; margin: 0px;}
 
 
-body { margin: 0; font-family: 'Quicksand', sans-serif;  background-color: #fefefe;  overflow: auto; }
+body { margin: 0; font-family: 'Quicksand', sans-serif;  background-color: #fefefe;  overflow: auto; min-width: 300px;}
 
 a{color: #000;  word-wrap:break-word;}
 a:hover {color:#666;}
@@ -17,7 +17,7 @@ ul,li{list-style: none; margin: 0px;}
 .sideMenu li { list-style: none;}
 .sideMenu a { display: block; padding: 10px 15px; text-align: left; }
 
-.breadcrumbs{ padding: 0; margin: 7px 0;}
+.breadcrumbs{ padding: 0; margin: 7px 0; height: 30px; max-width: 100%; overflow: hidden;}
 .breadcrumbs li{ display: inline; font-size: 12px; margin-right: 10px; }
 .breadcrumbs li a{ color: #14A792;font-size: 12px; }
 .breadcrumbs li+li::before{ content: ' › '; color: #14A792; }
@@ -54,21 +54,17 @@ ul,li{list-style: none; margin: 0px;}
 .intro span { display: block; height: 30px; width: 100%; color: #666; text-align: center; font-size: 20px; margin: 15px 0;}
 .block-wrapper{ width: 100%; margin-bottom: 20px; clear: both;}
 /* blocks for right, left, top and bottom right, top and bottom left, and all, ll=large left, lr = large*/
-.block-l, .block-r, .block-a, .block-tr, .block-tl, .block-br, .block-bl, .block-ll, .block-lr{ width: 48%; height: 150px; border: 1px solid #ccc; position: relative;  margin-bottom: 20px;}
+.block-l, .block-r, .block-a, .block-tr, .block-tl, .block-br, .block-bl, .block-ll, .block-lr{ width: 48%; height: 240px; border: 1px solid #f5f5f6; position: relative;  margin-bottom: 20px; background-repeat: no-repeat; background-position: center; background-size: cover; }
 .block-l{ float: left;}
 .block-r{ float: right;}
-.block-l a, .block-r a, .block-a a{ display: block; width: 100%; background-color: #666; opacity: 0.5; position: absolute; bottom: 20px; text-align: center; color: #fff; padding: 10px 0; text-decoration:none;}
-.block-l a:hover, .block-r a:hover{ opacity: 1;}
+.block-l a, .block-r a, .block-a a{ display: block; width: 100%; background-color: rgba(106,107,108,0.5);  position: absolute; bottom: 0px; text-align: center; color: #fff; padding: 10px 0; text-decoration:none;}
+.block-l a:hover, .block-r a:hover, .block-a a:hover{ background-color: rgba(106,107,108,0.8); }
 .block-a { width: 100%;}
 
 
 .pagination{ margin-top: 40px; text-align: center;}
 /* divider not used */
 .divider{ border-bottom: 1px dotted #ccc; border-top: 0; display: none;}
-
-
-.article a{ white-space: nowrap; word-break: break-all; display: inline-block; max-width: 100%;}
-.article p{ word-wrap: break-word;}
 
 
 /* ---- media query below ---*/
@@ -79,10 +75,10 @@ ul,li{list-style: none; margin: 0px;}
   p{overflow-wrap: break-word; word-wrap: break-word;}
   a {word-break: break-all;}
   p img { max-width: 80%; margin-right: 20px; border:1px solid #ccc;}
+  .copyright{margin: 60px 0;}
   .article_body p img{border: none;}
   .wrapper{ margin-top: 0;}
   .content{ border: none; padding: 10px 0px; margin-left: 0;}
-  .main { margin-top:40px;}
   .intro { margin-bottom: 40px;}
   .block-wrapper{ margin-top: 20px;}
   .block-l, .block-r{ width: 100%; margin-top: 20px;}
@@ -95,13 +91,24 @@ ul,li{list-style: none; margin: 0px;}
   .NavContent .logo{ left: 5px; height: 60px; }
   .NavContent .logo img{ display: none;}
 
-  .NavContent .Nav{ margin-left: 10%; width:90%; height: 60px;}
-  .NavContent .Nav>li{ margin-right: 7px;height: 60px; line-height: 60px; }
+  .NavContent .Nav{ margin-left: 0%; width:100%; height: 60px;}
+  .NavContent .Nav>li{ margin-right: 5px; margin-left: 5px;height: 60px; line-height: 60px; }
   .NavContent .Nav>li>a{ height: 60px; line-height: 60px; padding: 0 10px;  font-size: 16px;}
-  .NavContent .Nav>li:hover>a,.NavContent .Nav>li .current{ color: #049fd9;border-bottom: 1px solid #049fd9; height: 59px;}
+  .NavContent .Nav>li:hover>a,.NavContent .Nav>li .current{ border-bottom: 1px solid #049fd9; height: 59px;}
 
 }
 @media only screen and ( max-width: 480px) {
   .intro { margin-bottom: 90px;}
   .container_left{ width: 10px; -webkit-flex:none; flex:none;}
+  .copyright{margin: 40px 0; font-size: 12px;}
+
+  .wrapper {padding: 0 7px;}
+  .breadcrumbs{ padding: 0; margin: 0px;}
+  .breadcrumbs li{ display: inline; font-size: 12px; margin-right: 3px; }
+
+  .NavContent{ height: 40px;}
+  .NavContent .Nav{ margin-left: 0; width:100%; height: 40px;}
+  .NavContent .Nav>li{ margin-right: 2px; margin-left: 3px; height: 40px; line-height: 40px; }
+  .NavContent .Nav>li>a{ height: 40px; line-height: 40px; padding: 0 7px;  font-size: 14px;}
+  .NavContent .Nav>li:hover>a,.NavContent .Nav>li .current{ border-bottom: 1px solid #049fd9; height: 39px;}
 }
